==> yaozong1/C-testing-Code/pca10056/blank/ses/MCP2515/mcp_can.c <==
#include "nrf_delay.h"
#include "nrf_gpio.h"
#include "app_error.h"
#include "app_util_platform.h"
#include "nrf_drv_spi.h"
#include "bsp.h"
#include "app_timer.h"
#include "nordic_common.h"
#include "mcp_can.h"
#include "nrf_gpio.h"
#include "nrf_drv_gpiote.h"
#include "nrf_log.h"
#include "nrf_log_ctrl.h"
#include "nrf_log_default_backends.h"
#define SPI_SS_PIN_2        33
#define MCP2515_PIN_INT_2   3
#define SPI_MISO_PIN_2      13
#define SPI_MOSI_PIN_2      14
#define SPI_SCK_PIN_2       12
#define SPI_CAN_INSTANCE  0                                                   /**< SPI instance index. */

void mcp2515_reset()
{
    mcp2515_select();

    uint8_t m_tx_buf[1] = {MCP_RESET};
    uint8_t m_length = sizeof(m_tx_buf);
    
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_length, NULL, 0));

        while (!spi_xfer_done)
        {
            __WFE();
        }

    mcp2515_unselect();
}

uint8_t mcp2515_readRegister(const uint8_t address)
{
    mcp2515_select();

    uint8_t m_tx_buf[] = {MCP_READ, address, 0x00};
    uint8_t m_tx_length = sizeof(m_tx_buf);

    uint8_t m_rx_buf[3];      
    uint8_t m_rx_length = sizeof(m_rx_buf);

    memset(m_rx_buf, 0, m_rx_length);
        
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_tx_length, m_rx_buf, m_rx_length));

    //while (!spi_xfer_done)
    //{
    //    if (nrf_sdh_is_enabled())
    //    {
    //        sd_app_evt_wait();
    //    }
    //    else
    //    {
    //        __WFE();
    //    }
    //}
        while (!spi_xfer_done)
        {
            __WFE();
        }
    mcp2515_unselect();

    return m_rx_buf[2];  
}

void  mcp2515_readRegisterS(const uint8_t address, uint8_t values[], const uint8_t n)
{
    uint8_t i;

    mcp2515_select();

    uint8_t m_tx_buf[] = {MCP_READ, address};
    uint8_t m_tx_length = sizeof(m_tx_buf);
        
    uint8_t m_rx_buf[n+2];  
    uint8_t m_rx_length = sizeof(m_rx_buf);
           
    memset(m_rx_buf, 0, m_rx_length);
        
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_tx_length, m_rx_buf, m_rx_length));

    //while (!spi_xfer_done)
    //{
    //    if (nrf_sdh_is_enabled())
    //    {
    //        sd_app_evt_wait();
    //    }
    //    else
    //    {
    //        __WFE();
    //    }
    //}  

            while (!spi_xfer_done)
        {
            __WFE();
        }

    for (i=0; i<n && i<CAN_MAX_CHAR_IN_MESSAGE-2; i++)
    {
        values[i] = m_rx_buf[i+2];
    }

    mcp2515_unselect();

    return; 
}

void  mcp2515_setRegister(const uint8_t address, const uint8_t value)
{
    mcp2515_select();

    uint8_t m_tx_buf[3] = {MCP_WRITE, address, value};
    uint8_t m_length = sizeof(m_tx_buf);
    
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_length, NULL, 0));

        while (!spi_xfer_done)
        {
            __WFE();
        }

    mcp2515_unselect();
}

void mcp2515_setRegisterS(const uint8_t address, const uint8_t values[], const uint8_t n)
{
    mcp2515_select();

    uint8_t tx_buf[2] = {MCP_WRITE, address};
    uint8_t m_tx_length = 2+n * sizeof(uint8_t);

    uint8_t* m_tx_buf = nrf_malloc(2+n * sizeof(uint8_t));

    memcpy(m_tx_buf, tx_buf, 2 * sizeof(uint8_t));                  //copy 2 uint8_t from tx_buf to m_tx_buf
    memcpy(m_tx_buf + 2, values, n * sizeof(uint8_t));              //copy n uint8_t from values to m_tx_buf
      
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_tx_length, NULL, 0));

    //while (!spi_xfer_done)
    //{
    //    if (nrf_sdh_is_enabled())
    //    {
    //        sd_app_evt_wait();
    //    }
    //    else
    //    {
    //        __WFE();
    //    }
    //}
          while (!spi_xfer_done)
        {
            __WFE();
        }
    nrf_free(m_tx_buf);

    mcp2515_unselect();
}

void  mcp2515_modifyRegister(const uint8_t address, const uint8_t mask, const uint8_t data)
{
    mcp2515_select();
	       
    uint8_t m_tx_buf[4] = {MCP_BITMOD, address, mask, data};
    uint8_t m_length = sizeof(m_tx_buf);
  
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_length, NULL, 0));

        while (!spi_xfer_done)
        {
            __WFE();
        }       

    mcp2515_unselect();
}

uint8_t  mcp2515_readStatus(void)                             
{
    mcp2515_select();

    uint8_t m_tx_buf[2] = {MCP_READ_STATUS, 0x00};
    uint8_t m_length = sizeof(m_tx_buf);

    uint8_t m_rx_buf[2]; 
    
    memset(m_rx_buf, 0, m_length);
        
    spi_xfer_done = false;

    APP_ERROR_CHECK(nrf_drv_spi_transfer(&can_spi, m_tx_buf, m_length, m_rx_buf, m_length));

    //while (!spi_xfer_done)
    //{
    //    if (nrf_sdh_is_enabled())
    //    {
    //        sd_app_evt_wait();
    //    }
    //    else
    //    {
    //        __WFE();
    //    }
    //}   
            while (!spi_xfer_done)
        {
            __WFE();
        }

    mcp2515_unselect();

    return m_rx_buf[1];
}

void  mcp2515_initCANBuffers(void)
{
    uint8_t i, a1, a2, a3;

    a1 = MCP_TXB0CTRL;
    a2 = MCP_TXB1CTRL;
    a3 = MCP_TXB2CTRL;
    for (i = 0; i < 14; i++)                                              /* in-buffer loop               */
    {                                         
        mcp2515_setRegister(a1, 0);
        mcp2515_setRegister(a2, 0);
        mcp2515_setRegister(a3, 0);
        a1++;
        a2++;
        a3++;
    }
    mcp2515_setRegister(MCP_RXB0CTRL, 0);
    mcp2515_setRegister(MCP_RXB1CTRL, 0);
}

uint8_t  mcp2515_init(const uint8_t canSpeed, const uint8_t clock)                       /* mcp2515init                  */
{
    #if MCP2515_DEBUG_MODE
        NRF_LOG_DEBUG("Entering mcp2515_ini"); 
    #endif

    uint8_t res;

    mcp2515_reset();
    nrf_delay_ms(10);   

    #if MCP2515_DEBUG_MODE
        NRF_LOG_DEBUG("Entering CANCTRL Mode"); 
    #endif

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
        #if MCP2515_DEBUG_MODE
            NRF_LOG_DEBUG("Enter Setting Mode Fail!!!"); 
        #else
            nrf_delay_ms(10);
        #endif

        return res;
    }

    #if MCP2515_DEBUG_MODE
        NRF_LOG_DEBUG("Enter Setting Mode Success"); 
    #else
        nrf_delay_ms(10);
    #endif

    /* set baudrate                 */
    if(mcp2515_configRate(canSpeed, clock))
    {
        #if MCP2515_DEBUG_MODE
            NRF_LOG_DEBUG("Set Rate Fail!!!"); 
        #else
            nrf_delay_ms(10);
        #endif

        return res;
    }

    #if MCP2515_DEBUG_MODE
        NRF_LOG_DEBUG("Set Rate Success"); 
    #else
        nrf_delay_ms(10);
    #endif

    if ( res == MCP2515_OK )
    {
        mcp2515_initCANBuffers();                                       /* init canbuffers              */
        
        mcp2515_setRegister(MCP_CANINTE, MCP_RX0IF | MCP_RX1IF);        /* interrupt mode               */

        #if (DEBUG_RXANY == 1)
            mcp2515_modifyRegister(MCP_RXB0CTRL, MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK, MCP_RXB_RX_ANY | MCP_RXB_BUKT_MASK);      /* enable both receive-buffers to receive any message and enable rollover */
            mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK, MCP_RXB_RX_ANY);
        #else
            mcp2515_modifyRegister(MCP_RXB0CTRL, MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK, MCP_RXB_RX_STDEXT | MCP_RXB_BUKT_MASK );  /* enable both receive-buffers to receive messages with std. and ext. identifiers and enable rollover */
            mcp2515_modifyRegister(MCP_RXB1CTRL, MCP_RXB_RX_MASK, MCP_RXB_RX_STDEXT);
        #endif
                                                                        
        res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);                     /* enter normal mode            */
        if(res)
        {
            #if MCP2515_DEBUG_MODE
                NRF_LOG_DEBUG("Enter Normal Mode Fail!!!"); 
            #else
                nrf_delay_ms(10);
            #endif
          
            return res;
        }

        #if MCP2515_DEBUG_MODE
            NRF_LOG_DEBUG("Enter Normal Mode Success"); 
        #else
            nrf_delay_ms(10);
        #endif
    }
    return res;
}

void  mcp2515_write_canMsg( const uint8_t buffer_sidh_addr )
{
    uint8_t mcp_addr;
    mcp_addr = buffer_sidh_addr;

    mcp2515_setRegisterS((mcp_addr+5), m_mcp_can.m_data, m_mcp_can.m_len );     /* write data bytes             */
    mcp2515_setRegister((mcp_addr+4), m_mcp_can.m_len );                        /* write the RTR and DLC        */
    mcp2515_write_id(mcp_addr, m_mcp_can.m_ext_flag, m_mcp_can.m_id );          /* write CAN id                 */
}

void  mcp2515_read_canMsg( const uint8_t buffer_sidh_addr )                     /* read can msg                 */
{
    uint8_t mcp_addr, ctrl;

    mcp_addr = buffer_sidh_addr;

    mcp2515_read_id( mcp_addr, &m_mcp_can.m_ext_flag, &m_mcp_can.m_id );

    ctrl = mcp2515_readRegister( mcp_addr-1 );
    m_mcp_can.m_len = mcp2515_readRegister( mcp_addr+4 );

    m_mcp_can.m_len &= MCP_DLC_MASK;
    mcp2515_readRegisterS( mcp_addr+5, &(m_mcp_can.m_data[0]), m_mcp_can.m_len );
}

uint8_t  setMsg( uint32_t id, uint8_t ext, uint8_t len, uint8_t *pData )
{
    int i = 0;
    m_mcp_can.m_ext_flag = ext;
    m_mcp_can.m_id = id;
    m_mcp_can.m_len = len;

    for(i = 0; i<MAX_CHAR_IN_MESSAGE; i++)
    {
        m_mcp_can.m_data[i] = *(pData+i);
    }

    return MCP2515_OK;
}

uint8_t  clearMsg()
{
    for(int i = 0; i<m_mcp_can.m_len; i++)
    {
        m_mcp_can.m_data[i] = 0x00;
    }

    m_mcp_can.m_id = 0;
    m_mcp_can.m_len = 0;
    m_mcp_can.m_ext_flag = 0;
    
    return MCP2515_OK;
}
