==> coryjfowler/MCP_CAN_lib/mcp_can.cpp <==
#include "mcp_can.h"
#define spi_read() SPI.transfer(0x00)                           //The arduino SPI lib dose not have a read, instead 0's are sent while the data is read in at the same time

void MCP_CAN::mcp2515_reset(void)                                      
{
    digitalWrite(CSpin, LOW);
    SPI.transfer(MCP_RESET);
    digitalWrite(CSpin, HIGH);
    delay(10);
}

byte MCP_CAN::mcp2515_readRegister(const byte address)                                                                     
{
    byte ret;

    digitalWrite(CSpin, LOW);   //Start
    SPI.transfer(MCP_READ);     //Send Read Instruction (12.3)
    SPI.transfer(address);      //Send byte address (T11-1)
    ret = spi_read();           //Send 0's on MOSI while reciving byte on MISO
    digitalWrite(CSpin, HIGH);  //End

    return ret;
}

void MCP_CAN::mcp2515_readRegisterS(const byte address, byte values[], const byte num_of_regs)
{
	byte i;

	digitalWrite(CSpin, LOW);
	SPI.transfer(MCP_READ);
	SPI.transfer(address);
	for (i=0; i<num_of_regs; i++) 
    {
		values[i] = spi_read();
	}
	digitalWrite(CSpin, HIGH);
}

void MCP_CAN::mcp2515_setRegister(const byte address, const byte value)
{
    digitalWrite(CSpin, LOW);   //Start
    SPI.transfer(MCP_WRITE);    //Send Write Instruction (12.5)
    SPI.transfer(address);      //Send byte address (T11-1)
    SPI.transfer(value);        //Send data to be written
    digitalWrite(CSpin, HIGH);  //End
}

void MCP_CAN::mcp2515_setRegisterS(const byte address, const byte values[], const byte n)
{
    byte i;
    digitalWrite(CSpin, LOW);
    SPI.transfer(MCP_WRITE);
    SPI.transfer(address);
       
    for (i=0; i<n; i++) 
    {
        SPI.transfer(values[i]);
    }
    digitalWrite(CSpin, HIGH);
}

void MCP_CAN::mcp2515_modifyRegister(const byte address, const byte mask, const byte data)
{
    digitalWrite(CSpin, LOW);
    SPI.transfer(MCP_BITMOD);
    SPI.transfer(address);
    SPI.transfer(mask);
    SPI.transfer(data);
    digitalWrite(CSpin, HIGH);
}

byte MCP_CAN::mcp2515_readStatus(void)                             
{
	byte i;
	digitalWrite(CSpin, LOW);
	SPI.transfer(MCP_READ_STATUS);  //(12.8)
	i = spi_read();
	digitalWrite(CSpin, HIGH);
	
	return i;
}

void MCP_CAN::mcp2515_initCANBuffers(void)
{
    byte i, a1, a2, a3;
    
    bool std = 0;               
    bool ext = 1;
    INT32U ulMask = 0x00, ulFilt = 0x00;


    mcp2515_write_id(MCP_RXM0SIDH, ext, ulMask);			/*Set both masks to 0           */
    mcp2515_write_id(MCP_RXM1SIDH, ext, ulMask);			/*Mask register ignores ext bit */
    
                                                            /* Set all filters to 0         */
    mcp2515_write_id(MCP_RXF0SIDH, ext, ulFilt);			/* RXB0: extended               */
    mcp2515_write_id(MCP_RXF1SIDH, std, ulFilt);			/* RXB1: standard               */
    mcp2515_write_id(MCP_RXF2SIDH, ext, ulFilt);			/* RXB2: extended               */
    mcp2515_write_id(MCP_RXF3SIDH, std, ulFilt);			/* RXB3: standard               */
    mcp2515_write_id(MCP_RXF4SIDH, ext, ulFilt);
    mcp2515_write_id(MCP_RXF5SIDH, std, ulFilt);

                                                                        /* Clear, deactivate the three  */
                                                                        /* transmit buffers             */
                                                                        /* TXBnCTRL -> TXBnD7           */
    a1 = MCP_TXB0CTRL;
    a2 = MCP_TXB1CTRL;
    a3 = MCP_TXB2CTRL;
    for (i = 0; i < 14; i++) {                                          /* in-buffer loop               */
        mcp2515_setRegister(a1, 0);
        mcp2515_setRegister(a2, 0);
        mcp2515_setRegister(a3, 0);
        a1++;
        a2++;
        a3++;
    }
    mcp2515_setRegister(RXB0CTRL, 0);
    mcp2515_setRegister(RXB1CTRL, 0);
}

byte MCP_CAN::mcp2515_init(const byte canSpeed)                      
{
  byte res;

    mcp2515_reset();

    res = mcp2515_setCANCTRL_Mode(MODE_CONFIG);
    if(res > 0)
    {
      return res;
    }

                                                                        /* set boadrate                 */
    if(mcp2515_configRate(canSpeed))
    {
      return res;
    }

    if ( res == MCP2515_OK ) {

                                                                        /* init canbuffers              */
        mcp2515_initCANBuffers();
                                                                        /* interrupt mode               */
        mcp2515_setRegister(MCP_CANINTE, MCP_RX0IF | MCP_RX1IF);
                                                                        /* enable both receive-buffers  */
                                                                        /* to receive messages          */
                                                                        /* with std. and ext. identifie */
                                                                        /* rs                           */
                                                                        /* and enable rollover          */
        mcp2515_modifyRegister(RXB0CTRL,
        MCP_RXB_RX_MASK | MCP_RXB_BUKT_MASK,
        MCP_RXB_RX_STDEXT | MCP_RXB_BUKT_MASK );
        mcp2515_modifyRegister(RXB1CTRL, MCP_RXB_RX_MASK,
        MCP_RXB_RX_STDEXT);
                                                                        /* enter normal mode            */
        res = mcp2515_setCANCTRL_Mode(MODE_NORMAL);     
                                                                   
        if(res)
        {           
          return res;
        }

    }                                                 
}

void MCP_CAN::mcp2515_write_canMsg(const byte buffer_sidh_addr)
{
    byte mcp_addr;
    mcp_addr = buffer_sidh_addr;
    mcp2515_setRegisterS(mcp_addr+5, m_nDta, m_nDlc );                  /* write data bytes, m_nDlc is
                                                                         used to tell setRegisterS how many*/

    if ( m_nRtr == 1)                                                   /* if RTR set bit in byte       */
    {
        m_nDlc |= MCP_RTR_MASK;  
    }
    mcp2515_setRegister((mcp_addr+4), m_nDlc );                        /* write the RTR and DLC (mcp_addr+4) = TXBnCTRL +1 +4 = TXBnDLC */
    mcp2515_write_id(mcp_addr, m_nExtFlg, m_nID );                     /* write CAN id                 */

}

void MCP_CAN::mcp2515_read_canMsg(const byte buffer_sidh_addr)        /* read can msg                 */
{
    byte mcp_addr, ctrl;

    mcp_addr = buffer_sidh_addr;

    mcp2515_read_id( mcp_addr, &m_nExtFlg,&m_nID );

    ctrl = mcp2515_readRegister( mcp_addr-1 );
    m_nDlc = mcp2515_readRegister( mcp_addr+4 );

    if ((ctrl & 0x08)) {
        m_nRtr = 1;
    }
    else {
        m_nRtr = 0;
    }

    m_nDlc &= MCP_DLC_MASK;
    mcp2515_readRegisterS( mcp_addr+5, &(m_nDta[0]), m_nDlc );
}

byte MCP_CAN::setMsg(INT32U id, byte ext, byte rtr, byte len, byte *pData)
{
    int i = 0;
    m_nExtFlg = ext;
    m_nID     = id;
    m_nRtr    = rtr;
    m_nDlc    = len;
    for(i = 0; i<8; i++)  //8 bytes in message
    m_nDta[i] = *(pData+i);
    return MCP2515_OK;
}

byte MCP_CAN::clearMsg()
{
    m_nID       = 0;
    m_nDlc      = 0;
    m_nExtFlg   = 0;
    m_nRtr      = 0;
    m_nfilhit   = 0;
    for(int i = 0; i<m_nDlc; i++ )
      m_nDta[i] = 0x00;

    return MCP2515_OK;
}
